# stage_ros

./: .travis.yml  CMakeLists.txt  readme.md
src/: main.cpp  robot.cpp  robot.h  stageros.cpp  stageros.h
src/behaviours/: CMakeLists.txt  wander.cpp
